commit vor Schulung

--- a/TcHmi_TestItAll/Hmi/Properties/tchmiconfig.json
+++ b/TcHmi_TestItAll/Hmi/Properties/tchmiconfig.json
@@ -50,7 +50,14 @@
       "type": "Stylesheet"
     }
   ],
-  "userControls": [],
+  "userControls": [
+    {
+      "url": "UC/UserControl1.usercontrol"
+    },
+    {
+      "url": "UC/UserControl2.usercontrol"
+    }
+  ],
   "content": [],
   "views": [
     {
