--- a/TcHmi_AssemblyLine_Test/Hmi/packages.config
+++ b/TcHmi_AssemblyLine_Test/Hmi/packages.config
@@ -4,6 +4,7 @@
   <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.758.8" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
   <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.758.8" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
   <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.758.8" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.SqliteHistorize" version="19.0.0" targetFramework="native1.12-tchmi" />
   <package id="Microsoft.TypeScript.MSBuild" version="4.6.4" developmentDependency="true" />
   <package id="TsStateControl" version="1.1.0" targetFramework="native1.12-tchmi" />
 </packages>
